* Fix Windows compilation